--- a/pages/agradecimentos.html
+++ b/pages/agradecimentos.html
@@ -55,9 +55,12 @@
     <main class="flex flex-col gap-6 items-center p-100">
         <h1 class="text-4xl font-extrabold text-gray-300 text-center">Agradecimentos</h1>
         <p class="text-gray-300 text-justify max-w-3xl leading-7">
-            Gostaria de expressar minha gratidão a todos que contribuíram para minha formação e desenvolvimento
-            durante meu tempo no SENAI. Essa jornada técnica em Análise e Desenvolvimento de Sistemas não só me
-            ensinou as bases da tecnologia, mas também despertou minha paixão por desenvolvimento de software.
+            Ao longo dessa trajetória no SENAI, tenho gratidão por todos que desempenharam um papel
+            fundamental no meu desenvolvimento pessoal e profissional. Cada etapa desta jornada foi construída
+            com muito esforço, dedicação. O curso de Análise e Desenvolvimento de Sistemas foi a base que não apenas
+            consolidou meu interesse pela
+            tecnologia, mas também me proporcionou uma visão mais ampla sobre a importância do desenvolvimento de
+            software na sociedade.
         </p>
 
         <div class="mt-12 space-y-10 max-w-4xl">
@@ -68,17 +71,6 @@
                     <p class="text-gray-300 text-sm">
                         Aos professores dedicados que compartilharam seus conhecimentos e sempre me incentivaram
                         a buscar mais, muito obrigado! Vocês são peças fundamentais no meu crescimento.
-                    </p>
-                </div>
-            </div>
-
-            <div class="flex gap-6 items-center">
-                <i class="fas fa-user-friends text-5xl text-gray-500"></i>
-                <div>
-                    <h2 class="text-xl font-bold text-gray-100">Colegas de Turma</h2>
-                    <p class="text-gray-300 text-sm">
-                        A convivência com vocês tornou essa experiência ainda mais especial. Cada projeto e desafio
-                        compartilhado foi uma oportunidade de aprendizado e amizade.
                     </p>
                 </div>
             </div>
@@ -106,20 +98,6 @@
             </div>
         </div>
     </main>
-
-    <footer class="bg-gray-600 p-6 absolute bottom-0 w-full">
-        <div class="flex items-center justify-between">
-            <p class="text-lg text-gray-300">Entre em contato comigo</p>
-            <ul class="flex flex-wrap justify-center gap-x-8 gap-4">
-                <li><a href="https://www.linkedin.com/in/apenasovini/" class="text-3xl hover:text-gray-300">
-                        <i class="fa-brands fa-linkedin"></i>
-                    </a></li>
-                <li><a href="https://github.com/ApenasoVini" class="text-3xl hover:text-gray-300">
-                        <i class="fa-brands fa-github"></i>
-                    </a></li>
-            </ul>
-        </div>
-    </footer>
 </body>
 
 </html>
