--- a/pages/atividades.html
+++ b/pages/atividades.html
@@ -52,7 +52,6 @@
         </nav>
     </header>
 
-
     <section class="my-6 text-center">
         <nav>
             <ul class="flex justify-center gap-6">
@@ -92,7 +91,7 @@
 
     <main class="space-y-8">
         <section id="linguagens" class="subject hidden">
-            <div class="max-w-4xl mx-auto p-6 bg-white">
+            <div class="max-w-4xl mx-auto p-6 bg-gray-100">
                 <h2 class="text-lg font-bold mb-4">Revista Literária</h2>
                 <p>Desenvolvimento de uma revista literária interativa, onde foram abordadas obras literárias clássicas
                     brasileiras. O projeto envolveu resenhas, artigos e discussões sobre as influências e o impacto das
@@ -101,7 +100,7 @@
                     src="https://www.canva.com/design/DAGDPv_Q5gw/EqHlv4l1uQE27M6BvuInxw/view?embed" frameborder="2"
                     class="mt-4 w-full"></iframe>
             </div>
-            <div class="max-w-4xl mx-auto p-6 bg-white">
+            <div class="max-w-4xl mx-auto p-6 bg-gray-100">
                 <h2 class="text-lg font-bold mb-4">Podcast</h2>
                 <p>Criação de um podcast interativo com o escritor João Bandeira, onde discutimos temas como suas obras
                     e a evolução da literatura brasileira contemporânea.</p>
@@ -111,7 +110,7 @@
         </section>
 
         <section id="matematica" class="subject hidden">
-            <div class="max-w-4xl mx-auto p-6 bg-white">
+            <div class="max-w-4xl mx-auto p-6 bg-gray-100">
                 <h2 class="text-lg font-bold mb-4">Matriz</h2>
                 <p>Exploração dos conceitos de matrizes, abordando sua definição, operações e aplicações matemáticas. A
                     atividade foi focada na teoria, com a apresentação de exemplos gráficos para facilitar o
@@ -120,7 +119,7 @@
                     src="https://www.canva.com/design/DAGWr5QBKMA/F2lYawIAHrfWNRyDowjR6A/view?embed"
                     class="mt-4 w-full"></iframe>
             </div>
-            <div class="max-w-4xl mx-auto p-6 bg-white">
+            <div class="max-w-4xl mx-auto p-6 bg-gray-100">
                 <h2 class="text-lg font-bold mb-4">Bem-estar Digital</h2>
                 <p>Análise do impacto do uso excessivo de smartphones, utilizando conceitos estatísticos para medir e
                     analisar os hábitos digitais. A atividade abordou a importância de equilibrar a tecnologia com o
@@ -133,7 +132,7 @@
         </section>
 
         <section id="humanas" class="subject hidden">
-            <div class="max-w-4xl mx-auto p-6 bg-white">
+            <div class="max-w-4xl mx-auto p-6 bg-gray-100">
                 <h2 class="text-lg font-bold mb-4">Mapa Interativo</h2>
                 <p>Desenvolvimento de um mapa interativo sobre as rotas de imigração dos venezuelanos, com informações
                     detalhadas sobre as condições de viagem e as dificuldades encontradas ao longo do trajeto. O projeto
@@ -141,7 +140,7 @@
                 <iframe width="600" height="600" allowfullscreen src="https://padlet.com/embed/32pyctbizytebsrg"
                     frameborder="2" class="mt-4 w-full"></iframe>
             </div>
-            <div class="max-w-4xl mx-auto p-6 bg-white">
+            <div class="max-w-4xl mx-auto p-6 bg-gray-100">
                 <h2 class="text-lg font-bold mb-4">O Grande Ditador</h2>
                 <p>Análise crítica do filme "O Grande Ditador", de Charles Chaplin, com foco nos aspectos políticos e
                     sociais abordados no contexto dos regimes totalitários. A atividade envolveu uma reflexão sobre como
@@ -154,14 +153,14 @@
         </section>
 
         <section id="natureza" class="subject hidden">
-            <div class="max-w-4xl mx-auto p-6 bg-white">
+            <div class="max-w-4xl mx-auto p-6 bg-gray-100">
                 <h2 class="text-lg font-bold mb-4">EcoCraft</h2>
                 <p>Criação de um ecossistema e seus componentes no minecraft, essa atividade combinou a criatividade com
                     a ilustração de termos usados na biologia</p>
                 <iframe width="500" height="400" allowfullscreen src="https://www.youtube.com/embed/zW-JSZltQiM"
                     frameborder="2" class="mt-4 w-full"></iframe>
             </div>
-            <div class="max-w-4xl mx-auto p-6 bg-white">
+            <div class="max-w-4xl mx-auto p-6 bg-gray-100">
                 <h2 class="text-lg font-bold mb-4">Pilha com limão</h2>
                 <p>Criação de uma pilha com limão e moedas, transformando energia química em energia elétrica, colocando
                     em prática os conhecimentos adquiridos em aula</p>
@@ -171,7 +170,7 @@
         </section>
 
         <section id="tecnico" class="subject hidden">
-            <div class="max-w-4xl mx-auto p-6 bg-white">
+            <div class="max-w-4xl mx-auto p-6 bg-gray-100">
                 <h2 class="text-lg font-bold mb-4">Compasio</h2>
                 <p>Trabalho para o curso técnico em desenvolvimento de sistemas
                     integrado ao ensino médio. A Compasio é uma plataforma proposta para conectar voluntários, ou
@@ -183,13 +182,22 @@
                 <img alt="" src="../assets/img/tec1.png" class="mt-4 w-full">
                 <img alt="" src="../assets/img/tec2.png" class="mt-4 w-full">
             </div>
-            <div class="max-w-4xl mx-auto p-6 bg-white">
+            <div class="max-w-4xl mx-auto flex flex-col p-6 bg-gray-100">
                 <h2 class="text-lg font-bold mb-4">Sonar</h2>
                 <p>Aplicativo de música para o curso técnico em desenvolvimento de sistemas. A
                     Sonar é um app que utiliza como tecnologias o React Native, ExpressJS e o PostgreSQL.
                 </p>
-                <img alt="" src="../assets/img/tec3.png" class="mt-4">
+                <img alt="" src="../assets/img/tec3.png" class="mt-4 self-center w-5/12">
             </div>
+            <div class="max-w-4xl mx-auto p-6 bg-gray-100">
+                <h2 class="text-lg font-bold mb-4">APIs</h2>
+                <p>Apresentação sobre APIs (Interfaces de Programação de Aplicações), explorando seu conceito, os
+                    principais métodos HTTP (verbos) e as ferramentas mais comuns para sua utilização e integração.</p>
+                <iframe width="500" height="400" allowfullscreen
+                    src="https://www.canva.com/design/DAGXyuSmjVw/krKx_Yjb-8dvK4hIfoGpHQ/view?embed" frameborder="2"
+                    class="mt-4 w-full"></iframe>
+            </div>
+
         </section>
     </main>
     <script src="../assets/js/script.js"></script>
