--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <p class="text-justify text-sm text-gray-400 leading-relaxed">Meu nome é Vinícius, sou um estudante de
                 17
                 anos do curso técnico em DS, me interessei por esse curso pois gosto de entender as relações entre
-                cliente e serviço, ligando o funcionamento de algo a como ele se relaciona com o consumidor. Este é
+                cliente e serviço, ligando o funcionamento de um sistema a como ele se relaciona com o usuário. Este é
                 meu portfólio final, onde apresento
                 a minha trajetória ao longo do ensino médio, destacando não apenas as atividades realizadas, mas
                 também minha evolução pessoal.</p>
@@ -92,8 +92,7 @@
         </div>
     </div>
 
-    <div class="flex w-full justify-center gap-10">
-        <img src="./assets/img/obj.png" alt="Image" class="rounded-md object-cover w-auto h-80" />
+    <div class="flex w-full justify-center">
         <div class="flex w-4/12 flex-col gap-4">
             <h2 class="text-3xl font-extrabold text-gray-200">Objetivos e perspectivas</h2>
             <p class="text-gray-100 text-sm text-justify leading-6">
