--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
     <div class="flex w-full gap-10 justify-center items-center">
         <div class="w-4/12">
-            <h1 class="text-3xl font-bold text-gray-100">Bem vindo!</h1>
-            <p class="text-justify text-sm text-gray-400 leading-relaxed">Meu nome é Vinícius, sou um estudante de
+            <h1 class="text-4xl font-bold text-gray-100">Bem vindo!</h1>
+            <p class="text-justify text-lg text-gray-400 leading-relaxed">Meu nome é Vinícius, sou um estudante de
                 17
                 anos do curso técnico em DS, me interessei por esse curso pois gosto de entender as relações entre
                 cliente e serviço, ligando o funcionamento de um sistema a como ele se relaciona com o usuário. Este é
@@ -67,57 +67,28 @@
     </div>
 
     <div class="flex justify-center gap-10">
-        <div class="bg-gray-800 w-96 h-96">
+        <div class="bg-gray-800 w-96">
             <img src="./assets/img/front.png" alt="" class="w-full h-60 object-cover" />
             <div class="p-6">
                 <h3 class="text-lg font-bold text-gray-100 mb-3">Frontend</h3>
-                <p class="text-gray-300 text-sm">É a parte do desenvolvimento focada na interface e experiência
+                <p class="text-gray-300 text-lg">É a parte do desenvolvimento focada na interface e experiência
                     do usuário, a qual eu estou focado</p>
             </div>
         </div>
-        <div class="bg-gray-800 w-96 h-96">
+        <div class="bg-gray-800 w-96">
             <img src="./assets/img/ediv.jpg" alt="" class="w-full h-60 object-cover" />
             <div class="p-6">
                 <h3 class="text-lg font-bold text-gray-100 mb-3">Edição de vídeo</h3>
-                <p class="text-gray-300 text-sm">Tenho interesse na área de edição e vídeo e criação de roteiro
+                <p class="text-gray-300 text-lg">Tenho interesse na área de edição e vídeo e criação de roteiro
                     e direção</p>
             </div>
         </div>
-        <div class="bg-gray-800 w-96 h-96">
+        <div class="bg-gray-800 w-96">
             <img src="./assets/img/violino.jpg" alt="" class="w-full h-60 object-cover" />
             <div class="p-6">
                 <h3 class="text-lg font-bold text-gray-100 mb-3">Violino</h3>
-                <p class="text-gray-300 text-sm">Toco violino desde os 12 anos</p>
+                <p class="text-gray-300 text-lg">Toco violino desde os 12 anos</p>
             </div>
-        </div>
-    </div>
-
-    <div class="flex w-full justify-center">
-        <div class="flex w-4/12 flex-col gap-4">
-            <h2 class="text-3xl font-extrabold text-gray-200">Objetivos e perspectivas</h2>
-            <p class="text-gray-100 text-sm text-justify leading-6">
-                Como desenvolvedor Front-End, meu objetivo é criar interfaces que proporcionem experiências
-                excepcionais para os usuários, enquanto avanço em minha carreira e habilidades.
-            </p>
-            <ul class="list-none text-sm text-gray-100 space-y-2">
-                <li class="flex items-center">
-                    <i class="fas fa-globe-americas mr-2"></i>
-                    Aprimorar o conhecimento em inglês para oportunidades internacionais.
-                </li>
-                <li class="flex items-center">
-                    <i class="fas fa-laptop-house mr-2"></i>
-                    Trabalhar em regime home office e alcançar flexibilidade profissional.
-                </li>
-                <li class="flex items-center">
-                    <i class="fas fa-graduation-cap mr-2"></i>
-                    Realizar bacharelado em Ciência da Computação ou tecnólogo em Análise e Desenvolvimento
-                    de Sistemas.
-                </li>
-                <li class="flex items-center">
-                    <i class="fas fa-code mr-2"></i>
-                    Construir interfaces modernas e intuitivas para projetos inovadores.
-                </li>
-            </ul>
         </div>
     </div>
 </body>
