--- a/pages/agradecimentos.html
+++ b/pages/agradecimentos.html
@@ -52,7 +52,7 @@
         </nav>
     </header>
 
-    <main class="flex flex-col gap-6 items-center p-100">
+    <main class="flex flex-col mt-12 gap-6 items-center p-100">
         <h1 class="text-4xl font-extrabold text-gray-300 text-center">Agradecimentos</h1>
         <p class="text-gray-300 text-justify max-w-3xl leading-7">
             Ao longo dessa trajetória no SENAI, tenho gratidão por todos que desempenharam um papel
