--- a/pages/evolucao.html
+++ b/pages/evolucao.html
@@ -11,7 +11,7 @@
     <title>VSF | Evolução</title>
 </head>
 
-<<body>
+<h3<div>
     <header class="w-full text-white p-6">
         <nav class="flex justify-center gap-10 items-center">
             <ul class="flex gap-4 items-center">
@@ -52,46 +52,77 @@
         </nav>
     </header>
 
-    <div class="flex justify-center w-full h-96 items-center">
-        <div class="w-10/12">
-            <div class="flex items-center justify-between relative">
-                <div class="absolute top-1/2 left-0 w-full h-1 bg-blue-500 transform -translate-y-1/2"></div>
-
-                <div class="relative flex flex-col items-center w-1/4">
-                    <div class="w-8 h-8 bg-blue-500 rounded-full border-4 border-white"></div>
-                    <div class="mt-4 text-center">
-                        <h3 class="text-lg font-semibold text-gray-800">2020</h3>
-                        <p class="text-sm text-gray-600">Início da jornada.</p>
-                    </div>
+    <main class="flex flex-col mt-28 gap-12">
+        <div class="flex justify-center gap-10 items-start">
+            <div class="flex flex-col items-center w-1/4">
+                <div class="w-8 h-8 bg-gray-500 rounded-full border-4 border-white"></div>
+                <div class="mt-4 text-center">
+                    <h2 class="text-lg font-semibold text-gray-100">2022</h2>
+                    <h3 class="text-2xl text-gray-50">Início da jornada</h3>
+                    <p class="text-gray-50">
+                        Comecei o primeiro ano ainda sem muitos conhecimentos acerca do desenvolvimento, foquei
+                        em estudar as matérias e em conseguir me adaptar ao novo Ensino Médio.
+                    </p>
                 </div>
+            </div>
 
-                <div class="relative flex flex-col items-center w-1/4">
-                    <div class="w-8 h-8 bg-blue-500 rounded-full border-4 border-white"></div>
-                    <div class="mt-4 text-center">
-                        <h3 class="text-lg font-semibold text-gray-800">2021</h3>
-                        <p class="text-sm text-gray-600">Primeiro projeto pessoal.</p>
-                    </div>
+            <div class="flex flex-col items-center w-1/4">
+                <div class="w-8 h-8 bg-gray-500 rounded-full border-4 border-white"></div>
+                <div class="mt-4 text-center">
+                    <h2 class="text-lg font-semibold text-gray-100">2023</h2>
+                    <h3 class="text-2xl text-gray-50">Aprendizagem</h3>
+                    <p class="text-gray-50">
+                        Consegui entrar na Aprendizagem Industrial em Backend e trabalhar como jovem aprendiz na
+                        Intelbras SA, onde, além de conhecer muitas pessoas com conhecimento amplo, comecei a
+                        desenvolver de forma assídua, tanto por essa esperiência, quanto também pelo Ensino Médio,
+                        com as matérias técnicas.
+                    </p>
                 </div>
+            </div>
 
-                <div class="relative flex flex-col items-center w-1/4">
-                    <div class="w-8 h-8 bg-blue-500 rounded-full border-4 border-white"></div>
-                    <div class="mt-4 text-center">
-                        <h3 class="text-lg font-semibold text-gray-800">2022</h3>
-                        <p class="text-sm text-gray-600">Hackathons e competições.</p>
-                    </div>
+            <div class="flex flex-col items-center w-1/4">
+                <div class="w-8 h-8 bg-gray-500 rounded-full border-4 border-white"></div>
+                <div class="mt-4 text-center">
+                    <h2 class="text-lg font-semibold text-gray-100">2023</h2>
+                    <h3 class="text-2xl text-gray-50">Terceirão</h3>
+                    <p class="text-gray-50">
+                        Com uma bagagem de conhecimento maior e também com um interesse concreto no desenvolvimento,
+                        fiz parte de projetos maiores, como a Compasio e o Sonar, além de abrir meus interesses para
+                        mais linguagens e frameworks, também tive o desafio das provas do Enem e Vestibular, onde
+                        coloquei em prática o conhecimento adquirido durante esses 3 anos.
+                    </p>
                 </div>
-
-                <div class="relative flex flex-col items-center w-1/4">
-                    <div class="w-8 h-8 bg-blue-500 rounded-full border-4 border-white"></div>
-                    <div class="mt-4 text-center">
-                        <h3 class="text-lg font-semibold text-gray-800">2023</h3>
-                        <p class="text-sm text-gray-600">Primeiro emprego.</p>
-                    </div>
-                </div>
-
             </div>
         </div>
-    </div>
+        <div class="flex w-full h-96 justify-center">
+            <div class="flex w-4/12 flex-col gap-4">
+                <h2 class="text-4xl font-extrabold text-center text-gray-200">Objetivos e perspectivas</h2>
+                <p class="text-gray-100 text-lg text-justify leading-6">
+                    Como desenvolvedor Front-End, meu objetivo é criar interfaces que proporcionem experiências
+                    excepcionais para os usuários, enquanto avanço em minha carreira e habilidades.
+                </p>
+                <ul class="list-none text-lg text-gray-100 space-y-2">
+                    <li class="flex items-center">
+                        <i class="fas fa-globe-americas mr-2"></i>
+                        Aprimorar o conhecimento em inglês para oportunidades internacionais.
+                    </li>
+                    <li class="flex items-center">
+                        <i class="fas fa-laptop-house mr-2"></i>
+                        Trabalhar em regime home office e alcançar flexibilidade profissional.
+                    </li>
+                    <li class="flex items-center">
+                        <i class="fas fa-graduation-cap mr-2"></i>
+                        Realizar bacharelado em Ciência da Computação ou tecnólogo em Análise e Desenvolvimento
+                        de Sistemas.
+                    </li>
+                    <li class="flex items-center">
+                        <i class="fas fa-code mr-2"></i>
+                        Construir interfaces modernas e intuitivas para projetos inovadores.
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </main>
     </body>
 
 </html>
