--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <img src="./assets/img/ediv.jpg" alt="" class="w-full h-60 object-cover" />
             <div class="p-6">
                 <h3 class="text-lg font-bold text-gray-100 mb-3">Edição de vídeo</h3>
-                <p class="text-gray-300 text-lg">Tenho interesse na área de edição e vídeo e criação de roteiro
+                <p class="text-gray-300 text-lg">Tenho interesse na área de edição de vídeo, criação de roteiro
                     e direção</p>
             </div>
         </div>
