Atualizar o evolucao.html

--- a/pages/evolucao.html
+++ b/pages/evolucao.html
@@ -74,7 +74,7 @@
                     <p class="text-gray-50">
                         Consegui entrar na Aprendizagem Industrial em Backend e trabalhar como jovem aprendiz na
                         Intelbras SA, onde, além de conhecer muitas pessoas com conhecimento amplo, comecei a
-                        desenvolver de forma assídua, tanto por essa esperiência, quanto também pelo Ensino Médio,
+                        desenvolver de forma assídua, tanto por essa experiência, quanto também pelo Ensino Médio,
                         com as matérias técnicas.
                     </p>
                 </div>
